<resources>
    <string name="account_title">游戏角色：</string>
    <string name="muzhi_account">拇指账号：</string>
    <string name="amount_title">支付金额：</string>
    <string name="game_title">游戏区服 ：</string>
    <string name="mz_left">拇指币余额：</string>
    <string name="mz_cz">拇指币充值 >></string>
    <string name="mz_pay">支付方式：</string>
    <string name="mz_recharge">充值方式：</string>
    <string name="other_way">其  他  方  式</string>
    <string name="only_left">专属币余额：</string>
    <string name="mz_notice">拇指游戏中心</string>
    <string name="wbwz">请选择问题分类（正确的分类有助于客服人员的及时回复）</string>
    <string name="tjnr">请在此处填写问题(请尽量详细的描述你遇到的问题，才能让客服人员准确的帮助到你)</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="bind_pnum_error_str">请输入正确格式的手机号码</string>
    <string name="bind_commit_error_str">请先获取验证码</string>
    <string name="bind_promit_01">请输入绑定的手机号码</string>
    <string name="bind_promit_02">请输入绑定帐号的密码</string>
    <string name="bind_promit_03">请输入6位验证码</string>
    <string name="bind_promit_04">请输入正确格式的验证码</string>
    <string name="bind_verc_commit_succ_str">验证码获取成功，将以短信形式发送到您的手机，请注意查收</string>
    <string name="bind_title_str">绑定帐号</string>
    <string name="bind_getcode_bt_str">获取验证码</string>
    <string name="bind_getcode_bt_str2">已发送(%s秒)</string>
    <string name="bind_getcode_bt_str3">验证码输入超时，请重新获取</string>
    <string name="privaty_txt">欢迎您申请使用拇指游玩科技有限公司及其关联。合作主题（统称“拇指游玩”）提供的服务。请您仔细阅读以下全部内容，特别是免除或者是限制责任的条款。</string>
    <string name="unbindsuc_dialog_notice_str">\t\t您已成功解绑手机号，请保管好您的账号密码，避免账号的财产损失</string>
    <string name="bind_dialog_notice_str">账号升级后方可使用密码修改功能并享受更多福利哦</string>
    <string name="buoy_change_dialog_notice_str">确认退出当前账号吗？</string>
    <string name="bind_dialog_notice_str2">您还未完成升级步骤，返回后可以在“账号升级”继续完成，确认返回吗？</string>
    <string name="bind_dialog_notice_str3">您还未完成更换手机绑定步骤，返回后可以在“未绑定”继续完成，确认返回吗？</string>
    <string name="changepsd_psd_et_str0">请输入原密码</string>
    <string name="changepsd_psd_et_str1">原密码验证错误</string>
    <string name="changepsd_psd_et_str2">请输入新密码</string>
    <string name="changepsd_psd_et_str3">新密码输入不一致</string>
    <string name="changepsd_psd_et_str4">不能与原密码相同</string>
    <string name="changepsd_psd_suc_str">密码修改成功</string>
    <string name="changepsd_psd_fail_str">密码修改失败</string>
    <string name="pay_input_zero_str5">金额首位数不能为0</string>
    <string name="changepsd_psd_input_str">两次输入密码不一致</string>
    <string name="findpsd_forservice_str">联系我们 >></string>
     <string name="contactus_str01">您可以通过以下方式联系我们：</string>
    <string name="contactus_str02">客服热线：</string>
    <string name="contactus_str03">客服Q群：</string>
    <string name="contactus_str04">官方网站：</string>
    <string name="mz_pnum_str">400-9611191</string>
    <string name="mz_cs_qq_str">414289676</string>
    <string name="mz_url_str">www.91muzhi.com</string>
    <string name="regist_commit_notice1">用户名或密码为空</string>
    <string name="regist_commit_notice2">密码至少6位字符</string>
    <string name="login_name_hint_str">请输入账号（不能使用纯数字组合）</string>
    <string name="login_get_back_account_str">找回密码</string>
    <string name="login_getback_str_02">其他方式</string>
    <string name="login_commit_notice1">用户名或密码为空</string>
    <string name="login_account_promit_str">请输入帐号</string>
    <string name="login_pwd_promit_str">请输入密码（请区分大小写）</string>
    <string name="login_pw_promit_str">密码(6~20个字符)</string>
    <string name="login_no_account_str">没有帐号?</string>
    <string name="Real_Name">姓名不能为空</string>
    <string name="Real_Card_Name">身份证号码不能为空</string>
    <string name="login_forget_account_str">忘记密码</string>
    <string name="login_find_psd_suc_str">您的密码将以短信发送到手机，请注意查收。</string>
    <string name="login_find_psd_fail_str">该号码尚未绑定任何账号，您可以点击“联系我们”继续找回</string>
    <string name="save_usn_psd">已将您的信息保存进相册</string>
    <string name="moblie_hint_str02">请输入卡号</string>
    <string name="moblie_hint_str03">请输入密码</string>
    <string name="moblie_hint_str06">充值说明:</string>
    <string name="moblie_hint_str07">1、充值成功后,可能会出现延迟,请耐心等待。</string>
    <string name="moblie_hint_str08">2、转零部分将自动转充为M币，存入您的个人账号中。</string>
    <string name="moblie_hint_str09">3、若充值金额不足以支付本订单，将先充为M币。</string>
	<string name="yeepay_notice">充值金额不符自动转为M币;</string>
</resources>