<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dimen_427_dip"
    android:layout_height="@dimen/dimen_413_dip"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/dimen_20_dip"
    android:layout_marginRight="@dimen/dimen_20_dip"
    android:background="@drawable/sdk_main_bg"
    android:orientation="vertical" >

    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_73_dip">

        <include layout="@layout/mzyw_pp_title" />

        <include layout="@layout/mzyw_pp_logo" />
    </RelativeLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dip"
        android:layout_marginLeft="@dimen/dimen_1_dip"
        android:layout_marginRight="@dimen/dimen_1_dip"
        android:background="#d6d6d6"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16_dip"
        android:layout_marginTop="@dimen/dimen_27_dip"
        android:textSize="@dimen/dimen_17_dip"
        android:text="@string/contactus_str01"
        android:textColor="#333333" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dip"
        android:layout_marginLeft="@dimen/dimen_1_dip"
        android:layout_marginRight="@dimen/dimen_1_dip"
        android:layout_marginTop="@dimen/dimen_13_dip"
        android:visibility="gone"
        android:background="#d6d6d6"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60_dip"
        android:layout_marginLeft="@dimen/dimen_16_dip"
        android:layout_marginRight="@dimen/dimen_16_dip"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/dimen_44_dip"
            android:layout_height="@dimen/dimen_44_dip"
            android:background="@drawable/img_03"
            android:textColor="@color/mz_text_thj"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/contactus_pnum_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_13_dip"
            android:text="@string/mz_pnum_str"
            android:layout_gravity="center"
            android:textSize="@dimen/dimen_17_dip"
            android:textColor="#333333" />
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dip"
        android:layout_marginLeft="@dimen/dimen_1_dip"
        android:layout_marginRight="@dimen/dimen_1_dip"
        android:background="#d6d6d6"/>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60_dip"
        android:layout_marginLeft="@dimen/dimen_16_dip"
        android:layout_marginRight="@dimen/dimen_16_dip"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/dimen_44_dip"
            android:layout_height="@dimen/dimen_44_dip"
            android:background="@drawable/img_06"
            android:textColor="@color/mz_text_thj"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/contactus_qq_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_13_dip"
            android:layout_gravity="center"
            android:text="@string/mz_cs_qq_str"
            android:textSize="@dimen/dimen_17_dip"
            android:textColor="#333333" />
    </LinearLayout>

    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dip"
        android:layout_marginLeft="@dimen/dimen_1_dip"
        android:layout_marginRight="@dimen/dimen_1_dip"
        android:background="#d6d6d6"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60_dip"
        android:layout_marginLeft="@dimen/dimen_16_dip"
        android:layout_marginRight="@dimen/dimen_16_dip"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/dimen_44_dip"
            android:layout_height="@dimen/dimen_44_dip"
            android:background="@drawable/icon_15"
            android:textColor="@color/mz_text_thj"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/contactus_url_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_13_dip"
            android:layout_gravity="center"
            android:text="@string/mz_url_str"
            android:textSize="@dimen/dimen_17_dip"
            android:textColor="#2b79c7" />
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dip"
        android:layout_marginLeft="@dimen/dimen_1_dip"
        android:layout_marginRight="@dimen/dimen_1_dip"
        android:background="#d6d6d6"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60_dip"
        android:layout_marginLeft="@dimen/dimen_16_dip"
        android:layout_marginRight="@dimen/dimen_16_dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="V:"
            android:gravity="center"
            android:textColor="#2b79c7"
            android:textSize="@dimen/dimen_17_dip" />

    </RelativeLayout>

</LinearLayout>