<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dimen_427_dip"
    android:layout_height="@dimen/dimen_340_dip"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/dimen_20_dip"
    android:layout_marginRight="@dimen/dimen_20_dip"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16_dip"
        android:layout_marginRight="@dimen/dimen_16_dip"
        android:layout_marginTop="@dimen/dimen_21_dip"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/dimen_21_dip"
            android:layout_height="@dimen/dimen_21_dip"
            android:src="@drawable/money_03" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_13_dip"
            android:textSize="@dimen/dimen_17_dip"
            android:textColor="#e4583a"
            android:text="支付金额:" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_17_dip"
            android:textColor="#e4583a"
            android:text="100元" />
        
    </LinearLayout>
    
    <zty.sdk.views.MyGridView
        android:id="@+id/yeepay_price_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:columnWidth="80dp"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:scrollbars="none"
        android:horizontalSpacing="10dp"
        android:verticalSpacing="10dp" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_13_dip"
        android:layout_marginLeft="@dimen/dimen_16_dip"
        android:layout_marginRight="@dimen/dimen_16_dip">
        
        <LinearLayout
	        android:id="@+id/yeepay_name_layout"
	        android:layout_width="@dimen/dimen_128_dip"
	        android:layout_height="@dimen/dimen_34_dip"
	        android:background="@drawable/tuoyuanxing_03"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/yeepay_itemname_et"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_marginLeft="@dimen/dimen_17_dip"
	            android:layout_weight="1"
	            android:gravity="center_vertical|left"
	            android:text="中国移动"
	            android:textColor="#FCFCFC"
	            android:textSize="@dimen/dimen_16_dip" />
	
	        <ImageView
	            android:id="@+id/yeepay_more_payway_iv"
	            android:layout_width="@dimen/dimen_14_dip"
	            android:layout_height="@dimen/dimen_8_dip"
	            android:layout_gravity="center_vertical"
	            android:layout_marginRight="@dimen/dimen_17_dip"
	            android:src="@drawable/qstart_more_btn1" />
	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/yeepay_price_layout"
	        android:layout_width="@dimen/dimen_128_dip"
	        android:layout_height="@dimen/dimen_34_dip"
	        android:layout_marginLeft="@dimen/dimen_67_dip"
	        android:background="@drawable/tuoyuanxing_ccc_05"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/yeepay_itemmoney_et"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_marginLeft="@dimen/dimen_17_dip"
	            android:layout_weight="1"
	            android:background="@null"
	            android:gravity="center_vertical|left"
	            android:text="100"
	            android:textColor="#686868"
	            android:textSize="15sp" />
	
	        <ImageView
	            android:id="@+id/yeepay_more_paymoney_iv2"
	            android:layout_width="@dimen/dimen_14_dip"
	            android:layout_height="@dimen/dimen_8_dip"
	            android:layout_gravity="center_vertical"
	            android:layout_marginRight="@dimen/dimen_17_dip"
	            android:src="@drawable/qstart_more_btn1" />
	    </LinearLayout>
        
    </LinearLayout>
	
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="@dimen/dimen_18_dip"
	    android:layout_marginLeft="@dimen/dimen_16_dip"
	    android:layout_marginRight="@dimen/dimen_16_dip"
	    android:orientation="horizontal">
        
        <ImageView
            android:layout_width="@dimen/dimen_16_dip"
            android:layout_height="@dimen/dimen_12_dip"
            android:layout_gravity="center"
            android:background="@drawable/card_03" />
        
	    <EditText
	        android:id="@+id/yeepay_cardno_et"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/dimen_20_dip"
	        android:layout_marginRight="@dimen/dimen_20_dip"
	        android:background="@null"
	        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
	        android:gravity="center_vertical|left"
	        android:hint="@string/moblie_hint_str02"
	        android:maxLength="21"
	        android:inputType="text"
	        android:singleLine="true"
	        android:textSize="13sp" />
	    
	</LinearLayout>
	
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dip"
        android:layout_marginLeft="@dimen/dimen_16_dip"
        android:layout_marginRight="@dimen/dimen_16_dip"
        android:layout_marginTop="@dimen/dimen_13_dip"
        android:background="#d6d6d6"/>
	    
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="@dimen/dimen_13_dip"
	    android:layout_marginLeft="@dimen/dimen_16_dip"
	    android:orientation="horizontal">
    
		<ImageView 
            android:layout_width="@dimen/dimen_16_dip"
            android:layout_height="@dimen/dimen_16_dip"
            android:layout_gravity="center"
            android:background="@drawable/card_psd_06"/>        
        
	    <EditText
	        android:id="@+id/yeepay_cardpsd_et"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/dimen_20_dip"
	        android:background="@null"
	        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
	        android:gravity="center_vertical|left"
	        android:hint="@string/moblie_hint_str03"
	        android:inputType="text"
	        android:singleLine="true"
	        android:textSize="13sp" />

	</LinearLayout>
	
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dip"
        android:layout_marginTop="@dimen/dimen_13_dip"
        android:layout_marginLeft="@dimen/dimen_16_dip"
        android:layout_marginRight="@dimen/dimen_16_dip"
        android:background="#d6d6d6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dimen_16_dip"
        android:layout_marginRight="@dimen/dimen_16_dip"
        android:layout_marginTop="@dimen/dimen_13_dip"
        android:gravity="center" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/dimen_209_dip"
            android:layout_height="@dimen/dimen_49_dip"
            android:src="@drawable/pay_pay_btn" />
        
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4_dip"
        android:layout_marginLeft="@dimen/dimen_16_dip"
        android:layout_marginRight="@dimen/dimen_16_dip"
        android:text="@string/moblie_hint_str06"
        android:textColor="#d55c51"
        android:textSize="@dimen/dimen_12_dip" />

    <TextView
        android:id="@+id/yeepay_notice1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16_dip"
        android:layout_marginRight="@dimen/dimen_16_dip"
        android:text="@string/moblie_hint_str07"
        android:textColor="#d55c51"
        android:textSize="@dimen/dimen_12_dip" />

    <TextView
        android:id="@+id/yeepay_notice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16_dip"
        android:layout_marginRight="@dimen/dimen_16_dip"
        android:text="@string/moblie_hint_str08"
        android:textColor="#d55c51"
        android:textSize="@dimen/dimen_12_dip" />

    <TextView
        android:id="@+id/yeepay_notice3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16_dip"
        android:layout_marginRight="@dimen/dimen_16_dip"
        android:text="@string/moblie_hint_str09"
        android:textColor="#d55c51"
        android:textSize="@dimen/dimen_12_dip" />

</LinearLayout>